tests/build/fail/widget_new/missing_value2.rs
use zero_ui::properties::margin;
use zero_ui::widgets::blank;

fn main() {
    let _ = blank! {
        margin =
    };
}
