tests/build/fail/widget_new/missing_value2.stderr
error: expected property value
 --> $DIR/missing_value2.rs:6:16
  |
6 |         margin =
  |                ^

warning: unused import: `zero_ui::properties::margin`
 --> $DIR/missing_value2.rs:1:5
  |
1 | use zero_ui::properties::margin;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
